--- a/.env.example
+++ b/.env.example
@@ -37,3 +37,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+OMDB_API_KEY=YOUR_API_KEY
+GOOGLE_PLACES_API_KEY=YOUR_API_KEY
