--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^2.5.7"
     },
     "dependencies": {
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "lodash.findindex": "^4.6.0"
     }
 }
