--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "font-awesome": "^4.7.0",
-        "lodash.findindex": "^4.6.0"
+        "lodash.findindex": "^4.6.0",
+        "vue-notification": "^1.3.12"
     }
 }
